[project]
name = "aegis-a11y"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.41.0",
    "api",
    "cv-layer",
    "reasoning-agent",
    "training-pipeline",
    "reportlab>=4.4.10",
    "weasyprint>=68.1",
    "lxml>=6.0.2",
    "html5lib>=1.1",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
api = { workspace = true }
cv-layer = { workspace = true }
reasoning-agent = { workspace = true }
training-pipeline = { workspace = true }
reconstruction = { workspace = true }

[dependency-groups]
dev = [
    "black>=26.3.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
